# agent-browser

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  package.json  pyproject.toml  railway.json  tsconfig.json
design/: python_backend_migration.md  runtime_tool_registration.md  tool-generation-api.md  tool_service_design.md
scripts/: build.sh  dev.sh  start-browser-service.sh
tool_generation_backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  railway.json
tool_generation_backend/app/: __init__.py  config.py  database.py  main.py
tool_generation_backend/app/agents/: __init__.py  openai_agent.py
tool_generation_backend/app/api/: __init__.py  health.py  jobs.py  sessions.py
tool_generation_backend/app/middleware/: __init__.py  logging.py
tool_generation_backend/app/models/: __init__.py  base.py  job.py  session.py  tool.py
tool_generation_backend/app/repositories/: __init__.py  base.py  session_repository.py  tool_repository.py
tool_generation_backend/app/services/: __init__.py  session_service.py  tool_service.py
tool_generation_backend/app/utils/: __init__.py  codex_utils.py  workspace_utils.py
tool_generation_backend/app/websocket/: __init__.py  handlers.py  manager.py
tool_generation_backend/simpletooling_integration/: __init__.py  client.py  monitoring.py
tool_generation_backend/tests/: test_v1_pipeline.py
