[project]
name = "agent-browser"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

# Core dependencies for the browser service
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "browser-use>=0.7.4",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "ipython>=8.15.0",
    "jupyter>=1.0.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",  # For mocking HTTP requests
]

# Documentation dependencies  
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

# All optional dependencies
all = [
    "agent-browser[dev,test,docs]",
]


[project.scripts]
# CLI scripts for the browser service
browser-service = "browser_service.cli:main"
start-browser-service = "browser_service.server:start_server"

[tool.hatch.build]
# Include the browser service package
include = [
    "packages/browser-service/**/*.py",
    "packages/browser-service/**/*.toml",
    "packages/browser-service/**/*.txt",
    "scripts/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/browser-service"]
